# oarepo-related-resources

./: MANIFEST.in  README.md  oarepo.yaml  pyproject.toml  run.sh
oarepo_related_resources/: __init__.py  config.py  errors.py  ext.py  proxies.py  session.py  utils.py  views.py
oarepo_related_resources/resolvers/: __init__.py  base.py  crossref.py  datacite.py  handle.py  registry.py  utils.py
oarepo_related_resources/resources/: __init__.py  config.py  resource.py
oarepo_related_resources/services/: __init__.py  config.py  idutils.py  permissions.py  results.py  service.py
tests/: __init__.py  conftest.py  test_doi_metadata_flow.py  test_metadata_flow.py  test_resolvers.py  test_resources.py  test_services.py
tests/data/: crossref_response.json  datacite_response.json  handle_response.html
