[project]
name = "oarepo-related-resources"
dynamic = ["version"]
description = "Related resource metadata import module extracted from NMA"
readme = "README.md"
license = "MIT"
authors = []
dependencies = [
    "oarepo[rdm,s3]>=14.0.0,<15.0.0",
    "oarepo-runtime>=4.0.0,<5.0.0",
    "oarepo-vocabularies>=5.0.0,<6.0.0",
    "beautifulsoup4",
    "boto3",
    "langcodes",
    "lxml",
    "python-dateutil",
    "types-python-dateutil",
    "rapidfuzz",
]
requires-python = ">=3.14,<3.15"

[project.optional-dependencies]
dev = [
    "pytest>=7.1.2",
]
tests = [
    "pytest>=7.1.2",
    "pytest-oarepo",
]
oarepo14=[
    "oarepo[rdm]>=14,<15",
]

[project.entry-points."invenio_base.api_apps"]
related_resources_import_extension = "oarepo_related_resources.ext:RelatedResourcesImportExtension"

[project.entry-points."invenio_base.apps"]
related_resources_import_extension = "oarepo_related_resources.ext:RelatedResourcesImportExtension"

[project.entry-points."invenio_base.api_blueprints"]
related_resources = "oarepo_related_resources.views:create_bp"

[tool.hatch.version]
path = "oarepo_related_resources/__init__.py"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
[tool.hatch.build.targets.sdist]
include = [
    "/oarepo_related_resources",
]

[[tool.mypy.overrides]]
follow_untyped_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"